-
Bug
-
Resolution: Done
-
P1: Critical
-
5.12.0 Beta 1, 5.12.0 Beta 3
-
None
-
-
6fa5fb2e0 (134-based-refactor)
https://codereview.qt-project.org/#/c/240252/ Update submodules on '5.12' in qt5 PS7
https://testresults.qt.io/coin/integration/qt/qt5/tasks/1538112198
agent:2018/09/25 08:29:32 build.go:193: [172/172] LINK gn.exe agent:2018/09/25 08:29:32 build.go:193: FAILED: gn.exe agent:2018/09/25 08:29:32 build.go:193: ninja -t msvc -- link.exe /nologo /OUT:gn.exe /PDB:gn.exe.pdb @gn.exe.rsp agent:2018/09/25 08:29:32 build.go:193: tools/gn/gn_main.obj : fatal error LNK1112: module machine type 'x86' conflicts with target machine type 'x64' agent:2018/09/25 08:29:32 build.go:193: ninja: build stopped: subcommand failed. agent:2018/09/25 08:29:32 build.go:193: Project ERROR: GN build error! agent:2018/09/25 08:29:32 build.go:193: NMAKE : fatal error U1077: '(' : return code '0x3' agent:2018/09/25 08:29:32 build.go:193: Stop. agent:2018/09/25 08:29:32 build.go:193: NMAKE : fatal error U1077: 'cd' : return code '0x2' agent:2018/09/25 08:29:32 build.go:193: Stop. agent:2018/09/25 08:29:32 build.go:193: NMAKE : fatal error U1077: 'cd' : return code '0x2' agent:2018/09/25 08:29:32 build.go:193: Stop. agent:2018/09/25 08:29:32 build.go:237: Process finished with error: exit status 2 agent:2018/09/25 08:29:32 build.go:435: Executing scheduled instruction 1 of 1 - Upload all core dumps if there are some agent:2018/09/25 08:29:32 build.go:196: Error reading from stdout/err: exit status 2 agent:2018/09/25 08:29:32 build.go:437: agent:2018/09/25 08:29:32 agent.go:198: Build failed agent:2018/09/25 08:29:32 agent.go:94: ERROR building: exit status 2
- is duplicated by
-
QTBUG-71464 QtWebEngine isn't build for MSVC2017 32 bit
-
- Closed
-
- is required for
-
QTBUG-71148 Add packaging configurations for MSVC 2017 32 bit in Qt 5.12
-
- Closed
-
| For Gerrit Dashboard: QTBUG-70728 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 240947,6 | Check if windows has 64 bit compiler | 5.11 | qt/qtwebengine | Status: MERGED | +2 | 0 |
| 240998,3 | Add x86 target support for gn | 69-based | qt/qtwebengine-chromium | Status: MERGED | +2 | 0 |
| 241103,4 | Fix creation of 'x86' toolchain in gn | 69-based | qt/qtwebengine-chromium | Status: MERGED | +2 | 0 |
| 244062,3 | Set target architecture to amd64_x86 when crosscompiling with VS | master | qtqa/tqtc-coin-ci | Status: MERGED | +2 | 0 |