Better platform support for GN

Merge of patches:
  Add x86 target support for gn
  Fix creation of 'x86' toolchain in gn
  Fix x86-32 builds with GCC 8
  Fix building gn on arm

Task-number: QTBUG-70728
Fixes: QTBUG-72391
Fixes: QTBUG-72393
Change-Id: I7316edb5acb9832736eee368a02fbc39650d0136
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>
Reviewed-by: Michal Klocek <michal.klocek@qt.io>