gn/build/gen.py
@@ -426,7 +426,11 @@ def WriteGNNinja(path, platform, host, options, linux_sysroot):
         '/D_HAS_EXCEPTIONS=0',
     ])
 
-    ldflags.extend(['/DEBUG', '/MACHINE:x64'])
+    target_arch = windows_target_build_arch()
+    if target_arch == 'x64':
+        ldflags.extend(['/MACHINE:x64'])
+    else:
+        ldflags.extend(['/MACHINE:x86'])
 
   static_libraries = {
       'base': {'sources': [
@@ -734,6 +738,12 @@ def WriteGNNinja(path, platform, host, options, linux_sysroot):
                     platform, host, options, cflags, cflags_cc, ldflags,
                     libflags, include_dirs, libs)
 
+def windows_target_build_arch():
+    target_arch = os.environ.get('Platform')
+    if target_arch in ['x64', 'x86']: return target_arch
+
+    if platform.machine().lower() in ['x86_64', 'amd64']: return 'x64'
+    return 'x86'
 
 if __name__ == '__main__':
   sys.exit(main(sys.argv[1:]))
